--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "schlange"
-version = "0.1.5"
+version = "0.1.6"
 authors = [
     {name = "Konja Rehm", email = "private@konja-rehm.de"},
 ]
-description = "Python auf Deutsch - Deutsche Schlüsselwörter für Python"
+description = "🐍 Python auf Deutsch - Deutsche Schlüsselwörter und .schlange Dateien für Python"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.6"
+dependencies = []
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Education",
@@ -29,8 +30,18 @@ classifiers = [
     "Topic :: Education",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: Software Development :: Localization",
+    "Topic :: Software Development :: Interpreters",
+    "License :: OSI Approved :: MIT License",
 ]
-keywords = ["deutsch", "german", "python", "education", "programming", "localization"]
+keywords = [
+    "deutsch", "german", "python", "education", "programming", "localization", 
+    "schlange", "deutsche-syntax", "python-deutsch", "german-python",
+    "educational-tool", "programming-language", "syntax-transformation"
+]
+
+[project.optional-dependencies]
+jupyter = ["IPython>=7.0.0"]
+dev = ["pytest>=6.0", "black", "flake8", "twine", "build"]
 
 [project.urls]
 Homepage = "https://github.com/Nokohokon/schlange"
